cmake_minimum_required(VERSION 3.0)
project(GProject)
add_subdirectory(manager)
set(GTARGET ${PROJECT_NAME})
set(GSOURCES main.cpp)
set(GINCLUDEPATH manager)
set(GLIBPATH ../win/lib/Hello/lib)
set(GLIBS GManager Hello)
include_directories(${GINCLUDEPATH})
link_directories(${GLIBPATH})
add_executable(${GTARGET} ${GSOURCES})
target_link_libraries(${GTARGET} ${GLIBS})
