cmake_minimum_required(VERSION 3.0)
project(GProject)
set(GTARGET GProject)
set(GSOURCES main.cpp)
set(GINCLUDEPATH ../cmake/lib/hello/include)
set(GLIBPATH ../cmake/lib/hello/lib)
set(GLIBS Hello)
include_directories(${GINCLUDEPATH})
link_directories(${GLIBPATH})
add_executable(${GTARGET} ${GSOURCES})
target_link_libraries(${GTARGET} ${GLIBS})
