cmake_minimum_required(VERSION 3.0)
project(GProject)
add_subdirectory(manager)
set(GTARGET GProject)
set(GSOURCES main.cpp)
set(GINCLUDEPATH manager)
set(GLIBPATH ../cmake/lib/hello/lib)
set(GLIBS Manager Hello)
include_directories(${GINCLUDEPATH})
link_directories(${GLIBPATH})
add_executable(${GTARGET} ${GSOURCES})
target_link_libraries(${GTARGET} ${GLIBS})
